# libfvde

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.md  acinclude.m4  appveyor.yml  autogen.ps1  autogen.sh  build.ps1  builddokan.ps1  configure.ac  libfvde-wiki.ini  libfvde.ini  libfvde.pc.in  libfvde.spec.in  runtests.ps1  runtests.sh  setup.cfg  setup.cfg.in  setup.py  syncdokan.ps1  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  syncwinflexbison.ps1  synczlib.ps1  tox.ini
common/: Makefile.am  byte_stream.h  common.h  config_borlandc.h  config_msc.h  config_winapi.h  file_stream.h  memory.h  narrow_string.h  system_string.h  types.h.in  wide_string.h
fvdetools/: Makefile.am  byte_size_string.c  byte_size_string.h  fvdeinfo.c  fvdemount.c  fvdeoutput.c  fvdeoutput.h  fvdetools_askpassword.c  fvdetools_askpassword.h  fvdetools_getopt.c  fvdetools_getopt.h  fvdetools_i18n.h  fvdetools_input.c  fvdetools_input.h  fvdetools_libbfio.h  fvdetools_libcdata.h  fvdetools_libcerror.h  fvdetools_libclocale.h  fvdetools_libcnotify.h  fvdetools_libcpath.h  fvdetools_libcsplit.h  fvdetools_libcstring.h  fvdetools_libcsystem.h  fvdetools_libfguid.h  fvdetools_libfvde.h  fvdetools_libuna.h  fvdetools_output.c  fvdetools_output.h  fvdetools_signal.c  fvdetools_signal.h  fvdetools_unused.h  fvdewipekey.c  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  (+6 more)
include/: Makefile.am  libfvde.h.in
include/libfvde/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfvde/: Makefile.am  fvde_metadata.h  fvde_volume.h  libfvde.c  libfvde.rc.in  libfvde_bit_stream.c  libfvde_bit_stream.h  libfvde_checksum.c  libfvde_checksum.h  libfvde_codepage.h  libfvde_compression.c  libfvde_compression.h  libfvde_data_area_descriptor.c  libfvde_data_area_descriptor.h  libfvde_debug.c  libfvde_debug.h  libfvde_definitions.h.in  libfvde_deflate.c  libfvde_deflate.h  libfvde_encrypted_metadata.c  libfvde_encrypted_metadata.h  libfvde_encryption.c  libfvde_encryption.h  libfvde_encryption_context.c  libfvde_encryption_context.h  libfvde_encryption_context_plist.c  libfvde_encryption_context_plist.h  libfvde_error.c  libfvde_error.h  libfvde_extern.h  libfvde_huffman_tree.c  libfvde_huffman_tree.h  libfvde_io_handle.c  libfvde_io_handle.h  libfvde_keyring.c  libfvde_keyring.h  libfvde_legacy.c  libfvde_legacy.h  libfvde_libbfio.h  libfvde_libcaes.h  (+55 more)
msvscpp/: Makefile.am  libfvde.sln
msvscpp/dokan/: dokan.vcproj
msvscpp/fvde_test_bit_stream/: fvde_test_bit_stream.vcproj
msvscpp/fvde_test_checksum/: fvde_test_checksum.vcproj
msvscpp/fvde_test_compression/: fvde_test_compression.vcproj
msvscpp/fvde_test_data_area_descriptor/: fvde_test_data_area_descriptor.vcproj
msvscpp/fvde_test_deflate/: fvde_test_deflate.vcproj
msvscpp/fvde_test_encrypted_metadata/: fvde_test_encrypted_metadata.vcproj
msvscpp/fvde_test_encryption_context/: fvde_test_encryption_context.vcproj
msvscpp/fvde_test_encryption_context_plist/: fvde_test_encryption_context_plist.vcproj
msvscpp/fvde_test_error/: fvde_test_error.vcproj
msvscpp/fvde_test_get_version/: fvde_test_get_version.vcproj
msvscpp/fvde_test_huffman_tree/: fvde_test_huffman_tree.vcproj
msvscpp/fvde_test_io_handle/: fvde_test_io_handle.vcproj
msvscpp/fvde_test_keyring/: fvde_test_keyring.vcproj
msvscpp/fvde_test_logical_volume/: fvde_test_logical_volume.vcproj
msvscpp/fvde_test_logical_volume_descriptor/: fvde_test_logical_volume_descriptor.vcproj
msvscpp/fvde_test_metadata/: fvde_test_metadata.vcproj
msvscpp/fvde_test_metadata_block/: fvde_test_metadata_block.vcproj
msvscpp/fvde_test_notify/: fvde_test_notify.vcproj
msvscpp/fvde_test_physical_volume/: fvde_test_physical_volume.vcproj
msvscpp/fvde_test_physical_volume_descriptor/: fvde_test_physical_volume_descriptor.vcproj
msvscpp/fvde_test_sector_data/: fvde_test_sector_data.vcproj
msvscpp/fvde_test_segment_descriptor/: fvde_test_segment_descriptor.vcproj
msvscpp/fvde_test_support/: fvde_test_support.vcproj
msvscpp/fvde_test_tools_output/: fvde_test_tools_output.vcproj
msvscpp/libbfio/: libbfio.vcproj
ossfuzz/: Makefile.am  ossfuzz_libbfio.h  ossfuzz_libfvde.h  volume_fuzzer.cc
pyfvde/: Makefile.am  pyfvde.c  pyfvde.h  pyfvde_datetime.c  pyfvde_datetime.h  pyfvde_error.c  pyfvde_error.h  pyfvde_file_object_io_handle.c  pyfvde_file_object_io_handle.h  pyfvde_file_objects_io_pool.c  pyfvde_file_objects_io_pool.h  pyfvde_guid.c  pyfvde_guid.h  pyfvde_integer.c  pyfvde_integer.h  pyfvde_libbfio.h  pyfvde_libcerror.h  pyfvde_libclocale.h  pyfvde_libcstring.h  pyfvde_libfguid.h  pyfvde_libfvde.h  pyfvde_logical_volume.c  pyfvde_logical_volume.h  pyfvde_logical_volumes.c  pyfvde_logical_volumes.h  pyfvde_physical_volume.c  pyfvde_physical_volume.h  pyfvde_physical_volumes.c  pyfvde_physical_volumes.h  pyfvde_python.h  pyfvde_unused.h  pyfvde_volume.c  pyfvde_volume.h  pyfvde_volume_group.c  pyfvde_volume_group.h
pyfvde-python3/: Makefile.am
tests/: Makefile.am  build.sh  fvde_test_bit_stream.c  fvde_test_checksum.c  fvde_test_compression.c  fvde_test_data_area_descriptor.c  fvde_test_deflate.c  fvde_test_encrypted_metadata.c  fvde_test_encryption_context.c  fvde_test_encryption_context_plist.c  fvde_test_error.c  fvde_test_functions.c  fvde_test_functions.h  fvde_test_get_version.c  fvde_test_getopt.c  fvde_test_getopt.h  fvde_test_huffman_tree.c  fvde_test_io_handle.c  fvde_test_keyring.c  fvde_test_libbfio.h  fvde_test_libcdata.h  fvde_test_libcerror.h  fvde_test_libclocale.h  fvde_test_libcnotify.h  fvde_test_libcstring.h  fvde_test_libcsystem.h  fvde_test_libfplist.h  fvde_test_libfvde.h  fvde_test_libuna.h  fvde_test_logical_volume.c  fvde_test_logical_volume_descriptor.c  fvde_test_macros.h  fvde_test_memory.c  fvde_test_memory.h  fvde_test_metadata.c  fvde_test_metadata_block.c  fvde_test_notify.c  fvde_test_physical_volume.c  fvde_test_physical_volume_descriptor.c  fvde_test_sector_data.c  (+32 more)
(+113 files in other folders)
