include_HEADERS = \
	libfvde.h

pkginclude_HEADERS = \
	libfvde/codepage.h \
	libfvde/definitions.h \
	libfvde/error.h \
	libfvde/extern.h \
	libfvde/features.h \
	libfvde/types.h

EXTRA_DIST = \
	libfvde.h.in \
	libfvde/definitions.h.in \
	libfvde/features.h.in \
	libfvde/types.h.in

DISTCLEANFILES = \
	libfvde.h \
	libfvde/definitions.h \
	libfvde/features.h \
	libfvde/types.h \
	Makefile \
	Makefile.in

