MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	fvde_test_encryption_context_plist/fvde_test_encryption_context_plist.vcproj \
	fvde_test_error/fvde_test_error.vcproj \
	fvde_test_logical_volume/fvde_test_logical_volume.vcproj \
	fvde_test_notify/fvde_test_notify.vcproj \
	fvde_test_support/fvde_test_support.vcproj \
	fvde_test_volume/fvde_test_volume.vcproj \
	fvde_test_volume_group/fvde_test_volume_group.vcproj \
	fvdeinfo/fvdeinfo.vcproj \
	fvdemount/fvdemount.vcproj \
	fvdewipekey/fvdewipekey.vcproj \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libfplist/libfplist.vcproj \
	libfvalue/libfvalue.vcproj \
	libfvde/libfvde.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pyfvde/pyfvde.vcproj \
	zlib/zlib.vcproj \
	libfvde.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

