MSVSCPP_FILES = \
	fvde_test_data_area_descriptor/fvde_test_data_area_descriptor.vcproj \
	fvde_test_encrypted_metadata/fvde_test_encrypted_metadata.vcproj \
	fvde_test_encryption_context_plist/fvde_test_encryption_context_plist.vcproj \
	fvde_test_error/fvde_test_error.vcproj \
	fvde_test_io_handle/fvde_test_io_handle.vcproj \
	fvde_test_keyring/fvde_test_keyring.vcproj \
	fvde_test_metadata/fvde_test_metadata.vcproj \
	fvde_test_metadata_block/fvde_test_metadata_block.vcproj \
	fvde_test_notify/fvde_test_notify.vcproj \
	fvde_test_sector_data/fvde_test_sector_data.vcproj \
	fvde_test_segment_descriptor/fvde_test_segment_descriptor.vcproj \
	fvde_test_support/fvde_test_support.vcproj \
	fvde_test_volume/fvde_test_volume.vcproj \
	fvde_test_volume_group/fvde_test_volume_group.vcproj \
	fvdeinfo/fvdeinfo.vcproj \
	fvdemount/fvdemount.vcproj \
	fvdewipekey/fvdewipekey.vcproj \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libfplist/libfplist.vcproj \
	libfvalue/libfvalue.vcproj \
	libfvde/libfvde.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pyfvde/pyfvde.vcproj \
	zlib/zlib.vcproj \
	libfvde.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

